Migrate off deprecated Thread.getId method
(cherry picked from commit 5860abad27f5f9dab21021a2ad2affdefd7b82ee)